--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,93 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+
+
+* {
+  box-sizing: border-box;
+}
+
+.container{
+  width: 600px;
+  background-color: #f7f7f7;
+  border-radius: 7px;
+  padding: 25px 100px;
+  margin: 100px auto;
+
+  
+}
+
+.message{
+ 
+      text-align: center;
+      font-size: 20px;
+      margin: 40px 0;
+      font-weight: bold;
+    
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+
+}
+
+.numbers{
+  display: flex;
+  justify-content: space-between;
+
+  
+
+  
+}
+
+
+
+.state{
+  height: 40px;
+  aspect-ratio: 1;
+  background-color: #e7e7e7;
+  border-radius: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 18px;
+}
+
+.buttons{
+  display: flex;
+  justify-content: space-between;
+}
+
+.btn{
+  border: none;
+  cursor: pointer;
+  padding: 10px 15px;
+  border-radius: 100px;
+  font-size: 14px;
+  font-weight: bold;
+
+  display: flex;
+  align-items: center;
+  gap: 10px;
+
+}
+
+.active{
+  background-color: #7950f2; 
+  color: #fff;
+}
+
+.close {
+  position: absolute;
+  top: 58px;
+  right: 23rem;
+  border: none;
+  background: none;
+  cursor: pointer;
+  font-size: 40px;
+  color: inherit;
+}
+
+.close:hover {
+  color: #7950f2;
+}
